--- a/code/android/AndroidManifest.xml
+++ b/code/android/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mygdx.game" >
 
+    <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="true" />
+
     <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="25" />
 
     <application
