Added new gradle dependencies

--- a/code/core/build.gradle
+++ b/code/core/build.gradle
@@ -13,4 +13,9 @@ eclipse.project {
 dependencies {
     compile 'junit:junit:4.12'
     testCompile 'junit:junit:4.12'
+
+    testCompile "com.badlogicgames.gdx:gdx:$gdxVersion"
+    testCompile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+    testCompile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
+    testCompile "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
 }
